--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Krishnakalva Devendra</div>
+      <div class="logo">Hey, Pleasure to see you here</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Resume Dev.pdf')"
+            onclick="window.open('assets/Dev_Resume_Soft.pdf')"
           >
             Download CV
           </button>
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>Fresher <br />Seeking oppurtunities in ML,<br />Data Science</p>
+              <p>Fresher <br />Seeking oppurtunities in ML,<br/>and  Data Science</p>
             </div>
             <div class="details-container">
               <img
@@ -100,15 +100,15 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Tech. Bachelors Degree<br />Electronics and Communication Engineering<br />Data Science (Minors)</p>
+              <p>B.Tech. Bachelors Degree<br/>Electronics and Communication Engineering,<br/>Data Science (Minors)</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              I'm a Final Year student, pursuing my graduation in B.Tech (Electronics and Communication Engg.), 
-              from JNTUA College of Engineering, Pulivendula. I've completed a minor degree in Data Science. 
-              As I am very interested towards solving problems using data, I want to start my career in the Data Science field.
-              So, I started learnig about Data Science and Machine Learning besides my core subjects of ECE. 
+              I'm a fresh engineering graduate, graduated in April 2024, in B.Tech (Electronics and Communication Engg.), 
+              from JNTUA College of Engineering, Pulivendula.  
+              As I am very interested towards solving problems using data, I wanted to start my career in the Data Science field.
+              So, I've completed a minor degree in Data Science besides my core subjects of ECE. Currently seeking oppurtunities to work and prove myself in the field of Data science. 
             </p>
           </div>
         </div>
@@ -125,6 +125,66 @@
       <h1 class="title">Skills</h1>
       <div class="experience-details-container">
         <div class="about-containers">
+          <div class="details-container">
+            <h2 class="experience-sub-title">Data Science</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Data Analysis</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Statistics</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Machine Learning</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Deep Learning</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Tableau</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+            </div>
+          </div>
           <div class="details-container">
             <h2 class="experience-sub-title">Web Development</h2>
             <div class="article-container">
@@ -196,66 +256,7 @@
               </article> -->
             </div>
           </div>
-          <div class="details-container">
-            <h2 class="experience-sub-title">Data Science</h2>
-            <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Data Analysis</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Statistics</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Machine Learning</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Deep Learning</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Tableau</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-            </div>
-          </div>
+          
         </div>
       </div>
       <img
