--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Krishnakalva Devendra</h1>
+        <h1 class="title">Devendra Krishnakalva</h1>
         <p class="section__text__p2">Data Science, ML Enthusiast</p>
         <div class="btn-container">
           <button
