--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('assets/Dev_Resume_Soft.pdf')"
+            onclick="window.open('assets/Resume_Fresher_VLSI.pdf')"
           >
             Download CV
           </button>
