--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Devendra Krishnakalva</h1>
-        <p class="section__text__p2">Data Science, ML Enthusiast</p>
+        <p class="section__text__p2">RTL Design, Functional Verification Enthusiast</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -60,15 +60,15 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/devendra-krishnakalva/'"
+            onclick="window.open('https://www.linkedin.com/in/devendra-krishnakalva/', '_blank')"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/itsmr79/'"
+            onclick="window.open('https://github.com/itsmr79/', '_blank')"
           />
-        </div>
+        </div>        
       </div>
     </section>
     <section id="about">
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>Fresher <br />Seeking oppurtunities in ML,<br/>and  Data Science</p>
+              <p>Fresher <br />Seeking oppurtunities in RTL Design,<br/>and  Design Verification</p>
             </div>
             <div class="details-container">
               <img
@@ -105,10 +105,11 @@
           </div>
           <div class="text-container">
             <p>
-              I'm a fresh engineering graduate, graduated in April 2024, in B.Tech (Electronics and Communication Engg.), 
+              I'm a recent engineering graduate, graduated in April 2024, in B.Tech (Electronics and Communication Engg.), 
               from JNTUA College of Engineering, Pulivendula.  
-              As I am very interested towards solving problems using data, I wanted to start my career in the Data Science field.
-              So, I've completed a minor degree in Data Science besides my core subjects of ECE. Currently seeking oppurtunities to work and prove myself in the field of Data science. 
+              I'm currently working as <b>Assistant Systems Engineer at TCS</b>, I want to build my career in the field of <b>RTL Designing, and Design Verification</b>. 
+              I've attended <b>Advanced RTL Design, Funtional Verification Training by VLSI Guru</b> to upgrade my skills in the Digital VLSI domain. 
+              The offerings for the above mentioned roles will be appriciated to showcase my skills and allows me to develop efficient designs and testbenches using <b>Verilog, SystemVerilog, UVM, AMBA Communication Protocols.</b> 
             </p>
           </div>
         </div>
@@ -186,7 +187,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Web Development</h2>
+            <h2 class="experience-sub-title">Functional Verification</h2>
             <div class="article-container">
               <article>
                 <img
@@ -195,7 +196,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
+                  <h3>Digital Electronics</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -206,7 +207,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS</h3>
+                  <h3>Verilog</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -217,7 +218,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
+                  <h3>SystemVerilog</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -228,22 +229,22 @@
                   class="icon"
                 />
                 <div>
-                  <h3>JavaScript</h3>
+                  <h3>UVM</h3>
                   <p>Basic</p>
                 </div>
               </article>
-              <!-- <article>
+              <article>
                 <img
                   src="./assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
                 <div>
-                  <h3>TypeScript</h3>
-                  <p>Basic</p>
+                  <h3>AMBA</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
-              <article>
+              <!-- <article>
                 <img
                   src="./assets/checkmark.png"
                   alt="Experience icon"
@@ -279,17 +280,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Doctor Visits Data Analysis</h2>
+            <h2 class="experience-sub-title project-title">Memory Module Design(Verilog)</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/itsmr79/IBM_Edunet-Internship'"
+                onclick="window.open('https://github.com/devendra-vlsi-engineer/memory_verilog', '_blank')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.linkedin.com/posts/devendra-krishnakalva_ibm-data-analytics-internship-certificate-activity-7115697400664489986-nGbi?utm_source=share&utm_medium=member_desktop'"
+                onclick="window.open('https://www.linkedin.com/posts/devendra-krishnakalva_ibm-data-analytics-internship-certificate-activity-7115697400664489986-nGbi?utm_source=share&utm_medium=member_desktop', '_blank')"
               >
                 LinkedIn
               </button>
@@ -307,13 +308,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/itsmr79/Internship-Twilearn-Edutech'"
+                onclick="window.open('https://github.com/itsmr79/Internship-Twilearn-Edutech', '_blank')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.linkedin.com/posts/devendra-krishnakalva_certificate-of-internship-data-science-activity-7088744541788246016-mTQO?utm_source=share&utm_medium=member_desktop'"
+                onclick="window.open('https://www.linkedin.com/posts/devendra-krishnakalva_certificate-of-internship-data-science-activity-7088744541788246016-mTQO?utm_source=share&utm_medium=member_desktop','_blank')"
               >
                 LinkedIn
               </button>
@@ -331,13 +332,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/itsmr79/Internship_codeclause1'"
+                onclick="window.open('https://github.com/itsmr79/Internship_codeclause1','_blank')"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.linkedin.com/posts/devendra-krishnakalva_internship-completion-certificate-activity-7081854231263006720--I1_?utm_source=share&utm_medium=member_desktop'"
+                onclick="window.open('https://www.linkedin.com/posts/devendra-krishnakalva_internship-completion-certificate-activity-7081854231263006720--I1_?utm_source=share&utm_medium=member_desktop','_blank')"
               >
                 LinkedIn
               </button>
@@ -370,7 +371,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com/in/devendra-krishnakalva/" target="_blank">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/devendra-krishnakalva/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
         </div>
       </div>
     </section>
